--- a/popup/todo.css
+++ b/popup/todo.css
@@ -47,7 +47,7 @@ ul li.checked {
 }
 
 /* Add a "checked" mark when clicked on */
-ul li.checked::before {
+/* ul li.checked::before {
     content: '';
     position: absolute;
     border-color: #fff;
@@ -58,7 +58,7 @@ ul li.checked::before {
     transform: rotate(45deg);
     height: 15px;
     width: 7px;
-}
+} */
 
 /* Style the close button */
 .close {
@@ -76,7 +76,7 @@ ul li.checked::before {
 /* style the open button */
 .open {
     position: absolute;
-    right: 45;
+    right: 90;
     top: 0;
     padding: 13px 16px 12px 16px;
 }
@@ -86,6 +86,23 @@ ul li.checked::before {
     color: white;
 }
 
+/* style the cross off button */
+.cross {
+    position: absolute;
+    right: 45;
+    top: 0;
+    padding: 13px 16px 12px 16px;
+}
+
+.cross:hover {
+    background-color: #70A288;
+    color: white;
+}
+
+/*sub class */
+.sub {
+    text-indent: 50px;
+}
 
 /* Style the header */
 .header {
@@ -130,3 +147,64 @@ input {
 .addBtn:hover {
     background-color: #bbb;
 }
+
+/* button code */
+#timer {
+    font-family: sans-serif;
+    display: grid;
+    /* height: 100vh; */
+    place-items: center;
+  }
+  
+  .base-timer {
+    position: relative;
+    width: 150px;
+    height: 150px;
+  }
+  
+  .base-timer__svg {
+    transform: scaleX(-1);
+  }
+  
+  .base-timer__circle {
+    fill: none;
+    stroke: none;
+  }
+  
+  .base-timer__path-elapsed {
+    stroke-width: 7px;
+    stroke: grey;
+  }
+  
+  .base-timer__path-remaining {
+    stroke-width: 7px;
+    stroke-linecap: round;
+    transform: rotate(90deg);
+    transform-origin: center;
+    transition: 1s linear all;
+    fill-rule: nonzero;
+    stroke: currentColor;
+  }
+  
+  .base-timer__path-remaining.green {
+    color: rgb(65, 184, 131);
+  }
+  
+  .base-timer__path-remaining.orange {
+    color: orange;
+  }
+  
+  .base-timer__path-remaining.red {
+    color: red;
+  }
+  
+  .base-timer__label {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+  }
