--- a/popup/todo.css
+++ b/popup/todo.css
@@ -1,49 +1,49 @@
 /* Include the padding and border in an element's total width and height */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    width: 300px;
+  width: 300px;
 }
 
 /* Remove margins and padding from the list */
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /* Style the list items */
 ul li {
-    cursor: pointer;
-    position: relative;
-    padding: 12px 8px 12px 40px;
-    background: #eee;
-    font-size: 18px;
-    transition: 0.2s;
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #eee;
+  font-size: 18px;
+  transition: 0.2s;
 
-    /* make the list items unselectable */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  /* make the list items unselectable */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* Set all odd list items to a different color (zebra-stripes) */
 ul li:nth-child(odd) {
-    background: #f9f9f9;
+  background: #f9f9f9;
 }
 
 /* Darker background-color on hover */
 ul li:hover {
-    background: #ddd;
+  background: #ddd;
 }
 
 /* When clicked on, add a background color and strike out text */
 ul li.checked {
-    background: #373D20;
-    color: #fff;
-    text-decoration: line-through;
+  background: #373d20;
+  color: #fff;
+  text-decoration: line-through;
 }
 
 /* Add a "checked" mark when clicked on */
@@ -62,149 +62,181 @@ ul li.checked {
 
 /* Style the close button */
 .close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
 }
 
 .close:hover {
-    background-color: #70A288;
-    color: white;
+  background-color: #70a288;
+  color: white;
 }
 
 /* style the open button */
 .open {
-    position: absolute;
-    right: 90;
-    top: 0;
-    padding: 13px 16px 12px 16px;
+  position: absolute;
+  right: 90;
+  top: 0;
+  padding: 13px 16px 12px 16px;
 }
 
 .open:hover {
-    background-color: #70A288;
-    color: white;
+  background-color: #70a288;
+  color: white;
 }
 
 /* style the cross off button */
 .cross {
-    position: absolute;
-    right: 45;
-    top: 0;
-    padding: 13px 16px 12px 16px;
+  position: absolute;
+  right: 45;
+  top: 0;
+  padding: 13px 16px 12px 16px;
 }
 
 .cross:hover {
-    background-color: #70A288;
-    color: white;
+  background-color: #70a288;
+  color: white;
 }
 
 /*sub class */
 .sub {
-    text-indent: 50px;
+  text-indent: 50px;
 }
 
 /* Style the header */
 .header {
-    background-color: #70A288;
-    padding: 30px 40px;
-    color: white;
-    text-align: center;
+  background-color: #70a288;
+  padding: 30px 40px;
+  color: white;
+  text-align: center;
 }
 
 /* Clear floats after the header */
 .header:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* Style the input */
 input {
-    margin: 0;
-    border: none;
-    border-radius: 0;
-    width: 75%;
-    padding: 10px;
-    float: left;
-    font-size: 16px;
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 75%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
 }
 
 /* Style the "Add" button */
 .addBtn {
-    padding: 10px;
-    width: 25%;
-    background: #d9d9d9;
-    color: #555;
-    float: left;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 0;
+  padding: 10px;
+  width: 25%;
+  background: #d9d9d9;
+  color: #555;
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 0;
 }
 
 .addBtn:hover {
-    background-color: #bbb;
+  background-color: #bbb;
 }
 
 /* button code */
 #timer {
-    font-family: sans-serif;
-    display: grid;
-    /* height: 100vh; */
-    place-items: center;
-  }
-  
-  .base-timer {
-    position: relative;
-    width: 150px;
-    height: 150px;
-  }
-  
-  .base-timer__svg {
-    transform: scaleX(-1);
-  }
-  
-  .base-timer__circle {
-    fill: none;
-    stroke: none;
-  }
-  
-  .base-timer__path-elapsed {
-    stroke-width: 7px;
-    stroke: grey;
-  }
-  
-  .base-timer__path-remaining {
-    stroke-width: 7px;
-    stroke-linecap: round;
-    transform: rotate(90deg);
-    transform-origin: center;
-    transition: 1s linear all;
-    fill-rule: nonzero;
-    stroke: currentColor;
-  }
-  
-  .base-timer__path-remaining.green {
-    color: rgb(65, 184, 131);
-  }
-  
-  .base-timer__path-remaining.orange {
-    color: orange;
-  }
-  
-  .base-timer__path-remaining.red {
-    color: red;
-  }
-  
-  .base-timer__label {
-    position: absolute;
-    width: 150px;
-    height: 150px;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-  }
+  font-family: sans-serif;
+  display: grid;
+  place-items: right;
+  margin-left: 4px;
+  float: right;
+}
+
+.base-timer {
+  position: relative;
+  top: 10;
+  width: 50px;
+  height: 50px;
+}
+
+.base-timer__svg {
+  transform: scaleX(-1);
+}
+
+.base-timer__circle {
+  fill: none;
+  stroke: none;
+}
+
+.base-timer__path-elapsed {
+  stroke-width: 7px;
+  stroke: grey;
+}
+
+.base-timer__path-remaining {
+  stroke-width: 7px;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
+  fill-rule: nonzero;
+  stroke: currentColor;
+}
+
+.base-timer__path-remaining.green {
+  color: rgb(65, 184, 131);
+}
+
+.base-timer__path-remaining.orange {
+  color: orange;
+}
+
+.base-timer__path-remaining.red {
+  color: red;
+}
+
+.base-timer__label {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+}
+
+#start {
+  font-size: 8px;
+  width: 45px;
+  height: 20px;
+  padding: 0px;
+  margin-right: 10px;
+  margin-right: 10px;
+  transform: scale(.75);
+
+  float: right;
+
+  cursor: pointer;
+  background: transparent;
+  padding: 0;
+  border: none;
+  outline: none;
+  margin: 8px;
+}
+
+#playButton {
+  display: block;
+}
+
+#resetButton {
+  display: none;
+  opacity: .5;
+  background-color: red;
+  border-radius: 50px;
+}
